# window-opacifier

./: .deepsource.toml  Cargo.toml  readme.md
misc/: config.toml
src/: config.rs  main.rs  picom.rs  process.rs  utils.rs
