[package]
name = "window-opacifier"
description = "Rust crate for fine-grained x11 window opacity control"
version = "0.1.0"
edition = "2021"
readme = "readme.md"
license-file = "LICENSE"
repository = "https://github.com/TanvirOnGH/window-opacifier"
keywords = ["x11", "window", "opacity", "transparency", "animation"]
categories = ["graphics"]
publish = false
authors = ["Tanvir <tanvir.ahmed.tonoy@skiff.com>"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
ctrlc = ">=3.4.1"
toml = ">=0.8.2"
serde_derive = ">=1.0.189"
serde = ">=1.0.189"
dirs = ">=5.0.1"